# vulkan-testing

./: Cargo.toml  README.md  build.rs
.VSCodeCounter/2025-03-05_12-36-20/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
examples/: winit.rs
shaders/: lighting.slang  other.slang  raymarcher.slang  test.slang  voxel.slang
src/: adapter.rs  assets.rs  buffers.rs  debug.rs  device.rs  global.rs  input.rs  instance.rs  lib.rs  main.rs  movement.rs  physical_device.rs  pipeline.rs  pool.rs  queue.rs  recorder.rs  surface.rs  swapchain.rs  ticker.rs  voxel.rs
src/adapter/: adapter.rs  requirements.rs
src/device/: buffers.rs  device.rs  sync.rs
src/instance/: debug.rs  instance.rs
src/queue/: pool.rs  queue.rs
src/recorder/: barrier.rs  buffer.rs  commands.rs  recorder.rs  state.rs
src/surface/: surface.rs  swapchain.rs
