[package]
name = "vulkan-abstraction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27.5"
bytemuck = "1.12.3"
parking_lot = "0.12.0"
ash = "0.37.0+1.3.209"
raw-window-handle = "0.5.0"
ash-window = "0.12.0"
smallvec = "1.10.0"
gpu-allocator = { version = "0.21.0", features = ["vulkan"] }
log = "0.4.17"
ahash = "0.8.2"
thread_local = "1.1.4"
env_logger = "0.10.0"
bitflags = "1.3.2"

[features]
headless = []